# zambretti-py

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: tests.py
zambretti_py/: __init__.py  zambretti.py
zambretti_stfn/: zambretti.py
