[project]
name = "zambretti_stfn"
version = "0.0.1"
authors = [
  { name="STFN", email="stfndev@protonmail.com" },
]
description = "The Zambretti Algorithm for weather forecasting"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/thestfndev/zambretti-py"
Issues = "https://github.com/thestfndev/zambretti-py/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"